Click Changelog
===============

This contains all major version changes between click releases.

Version 1.1
-----------

(bugfix release, release to be decided)

Version 1.0
-----------

(no codename, released on May 21st 2014)

- Initial release.